# brachisto-probe

./: .gitignore  .python-version  FILES_CREATED.md  README.md  brachisto-probe-game_0d507403.plan.md  pyproject.toml  requirements.txt  run.py
.claude/: settings.local.json
backend/: app.py  auth.py  config.py  game_data_loader.py  game_engine.py  models.py  scripting.py  trajectory_solver.py
backend/api/: __init__.py  auth.py  game.py  scores.py  scripts.py  watch.py
backend/backend/: auth.py  config.py  models.py
docs/: CIVILIZATION_DNA_DESIGN.md  LUNAR_ORBITAL_ZONES_DESIGN.md  PROBE_TRAVEL_TIME_DESIGN.md  particle_visualization_system.md
frontend/static/css/: style.css
frontend/static/js/: api.js  main.js
frontend/static/js/game/: config.js  data_loader.js  engine.js  resources.js  ship_generator.js  skill_definitions.js  storage.js  upgrades.js
frontend/static/js/ui/: command_panel.js  debug_panel.js  energy_display.js  leaderboard.js  loading_galaxy.js  (+21 more)
frontend/templates/: index.html
game_data/: PHYSICS_TECH_TREE_DESIGN.md  README.md  additional_research_trees.json  buildings.json  economic_rules.json  game_modes.json  nearby_stars.json  new_systems_summary.md  orbital_mechanics.json  research_trees.json  research_trees_metadata.json  starship_drives.json  transfer_delta_v.json  universe_data.json
game_data/game_data/: additional_research_trees.json  buildings.json  orbital_mechanics.json
game_data/tech_trees/: autonomy.json  electromagnetics.json  materials.json  power.json  propulsion.json  thermal.json
instance/: brachisto_probe.db
(+49 files in other folders)
