[project]
name = "brachisto-probe"
version = "0.1.0"
description = "A space trajectory game with astrodynamics simulation"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.0.5",
    "flask-cors>=4.0.0",
    "flask-bcrypt>=1.0.1",
    "pyjwt>=2.8.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "werkzeug>=3.0.1",
    "poliastro>=0.17.0",
    "astropy>=5.0,<6",
    "numpy>=1.26,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "run.py"]
